# Payment-Gateway

.kiro/specs/monitoring-dashboard/: implementation-status.md  requirements.md
Chat_Template/: .env.example  README.md  package-lock.json  package.json
Chat_Template/src/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  page.tsx
Fintech_banking/: .env.example  docker-compose.yml
Fintech_banking/config/: services.php
Fintech_banking/routes/: api.php  web.php
Rust/: .env.example  .gitignore  Cargo.toml  README.md
Rust/crates/authz/: Cargo.toml
Rust/crates/authz/src/: jwt.rs  lib.rs  middleware.rs
Rust/crates/common/: Cargo.toml
Rust/crates/common/src/: cache.rs  config.rs  errors.rs  http_client.rs  lib.rs  time.rs
Rust/crates/contracts/: Cargo.toml
Rust/crates/contracts/src/: events.rs  user.rs
Rust/crates/db/: Cargo.toml
Rust/crates/db/src/: pool.rs
Rust/crates/messaging/: Cargo.toml
Rust/crates/messaging/src/: events.rs  kafka_consumer.rs  kafka_producer.rs  lib.rs
Rust/docs/: README.md  api-key-auth.md  architecture.md  chat-service.md  docker-build.md  jwt-auth.md  kafka-events.md  load-balancing.md  rate-limiting.md  redis-cache.md
Rust/infra/: CUSTOM_QUERIES.md  Dockerfile.auth  Dockerfile.chat  Dockerfile.check  Dockerfile.core  Dockerfile.gateway  Dockerfile.worker  LOAD_BALANCING.md  MONITORING.md  QUICK_START_MONITORING.md  README.md  check-monitoring.sh  compose.yml  haproxy.cfg  prometheus.yml
Rust/infra/grafana/provisioning/dashboards/: complete-dashboard.json
Rust/migrations/: add_last_seen.sql  chat_enhancements.sql  chat_tables.sql  monitoring_metrics.sql  payments.sql  rustdb.sql
Rust/services/auth-service/: Cargo.toml
Rust/services/auth-service/src/: main.rs
Rust/services/auth-service/src/api/: handlers.rs  routes.rs
Rust/services/auth-service/src/domain/: mod.rs  user.rs
Rust/services/auth-service/src/middleware/: api_key.rs  mod.rs  rate_limit.rs
Rust/services/auth-service/src/repo/: mod.rs  user_repo.rs
Rust/services/auth-service/src/service/: auth_service.rs  mod.rs
Rust/services/chat-service/: Cargo.toml
Rust/services/chat-service/examples/: direct-chat-demo.md
Rust/services/chat-service/src/: main.rs  redis_listener.rs
Rust/services/chat-service/src/api/: handlers.rs  mod.rs  routes.rs
Rust/services/chat-service/src/domain/: invitation.rs  message.rs  mod.rs  room.rs
Rust/services/chat-service/src/middleware/: rate_limit.rs
Rust/services/chat-service/src/repo/: invitation_repo.rs  message_repo.rs  mod.rs  room_repo.rs
Rust/services/chat-service/src/websocket/: messages.rs  mod.rs  rate_limiter.rs  server.rs  session.rs
Rust/services/core-service/: Cargo.toml
Rust/services/core-service/src/: main.rs
Rust/services/core-service/src/api/: handlers.rs  routes.rs
Rust/services/core-service/src/domain/: user.rs
Rust/services/core-service/src/repo/: user_repo.rs
Rust/services/core-service/src/service/: user_service.rs
Rust/services/gateway/: Cargo.toml
Rust/services/gateway/src/: clients.rs  handlers.rs  main.rs  middleware.rs  routes.rs
Rust/services/gateway/src/domain/: mod.rs  payment.rs
Rust/services/gateway/src/middleware/: rate_limit.rs
Rust/services/gateway/src/repo/: mod.rs  payment_repo.rs
Rust/services/gateway/src/service/: mod.rs  payment_service.rs
Rust/services/worker-service/: Cargo.toml
Rust/services/worker-service/src/: main.rs
Rust/services/worker-service/src/consumers/: email_consumer.rs  mod.rs  notification_consumer.rs
(+42 files in other folders)
