[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/db",
    "crates/authz",
    "crates/messaging",
    "crates/contracts",
    "services/gateway",
    "services/auth-service",
    "services/core-service",
    "services/worker-service",
    "services/chat-service",
]

[workspace.dependencies]
# Web framework
actix-web = "4.4"
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "mysql", "macros", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Config
config = "0.14"

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Kafka
rdkafka = "0.36"

# Redis
redis = { version = "0.24", features = ["tokio-comp"] }
