[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../../crates/common" }
contracts = { path = "../../crates/contracts" }
messaging = { path = "../../crates/messaging" }
db = { path = "../../crates/db" }

actix-web = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
