[package]
name = "worker-service"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../../crates/common" }
messaging = { path = "../../crates/messaging" }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
